--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body class="bg-gradient-to-br from-black via-gray-900 to-indigo-900 flex items-center justify-center h-screen">
   <div id="app" class="text-center max-w-lg mx-auto">
+    <!-- Cercle de progression -->
     <div class="relative w-64 h-64 mx-auto">
-      <!-- Cercle de progression -->
       <svg class="w-full h-full">
         <circle
           class="text-gray-700"
@@ -40,58 +40,59 @@
       <!-- Affichage du temps -->
       <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
         <div>
-          <span class="text-5xl font-bold text-white">{{ formattedTime }}</span>
+          <span class="text-6xl font-bold text-white">{{ formattedTime }}</span>
           <p class="text-sm text-gray-400">Temps restant</p>
         </div>
       </div>
     </div>
 
     <!-- Sélection du temps (affichez seulement si le minuteur n'est pas en cours) -->
-    <div v-if="!timerRunning && !isExpired" class="mt-8 grid grid-cols-2 gap-4">
+    <div v-if="!timerRunning && !isExpired" class="mt-8 space-y-4">
+      <!-- Champs pour les minutes et secondes -->
+      <div class="flex gap-4 justify-center">
+        <input 
+          type="number" 
+          v-model="minutes"
+          min="0"
+          class="px-6 py-3 rounded-lg border border-gray-600 text-white bg-transparent placeholder-gray-400 w-32 text-center"
+          placeholder="Minutes"
+          @input="updateTime"
+        />
+        <input 
+          type="number" 
+          v-model="seconds"
+          min="0"
+          max="59"
+          class="px-6 py-3 rounded-lg border border-gray-600 text-white bg-transparent placeholder-gray-400 w-32 text-center"
+          placeholder="Secondes"
+          @input="updateTime"
+        />
+      </div>
       <button
-        @click="setTime(5 * 60)"
-        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white font-medium rounded-lg transition-all"
+        @click="setTime(minutes * 60 + seconds)"
+        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white font-medium rounded-lg shadow-lg transition-all w-full"
       >
-        5 Min
+        Set Time
       </button>
-      <button
-        @click="setTime(10 * 60)"
-        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white font-medium rounded-lg transition-all"
-      >
-        10 Min
-      </button>
-      <button
-        @click="setTime(25 * 60)"
-        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 text-white font-medium rounded-lg transition-all"
-      >
-        25 Min
-      </button>
-      <input 
-        type="number" 
-        v-model="customTime" 
-        @input="setTime(customTime * 60)" 
-        class="px-4 py-2 rounded-lg border border-gray-600 text-white bg-transparent placeholder-gray-400"
-        placeholder="Custom (minutes)"
-      />
     </div>
 
     <!-- Boutons Start, Pause et Reset -->
     <div class="mt-8 flex justify-center gap-6" v-if="!isExpired">
       <button
         @click="startTimer"
-        class="px-6 py-3 bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 text-white font-medium rounded-lg shadow-lg transition-all"
+        class="px-6 py-3 bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 text-white font-medium rounded-lg shadow-lg transition-all w-32"
       >
         Start
       </button>
       <button
         @click="pauseTimer"
-        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-indigo-600 hover:from-purple-700 hover:to-indigo-700 text-white font-medium rounded-lg shadow-lg transition-all"
+        class="px-6 py-3 bg-gradient-to-r from-purple-600 to-indigo-600 hover:from-purple-700 hover:to-indigo-700 text-white font-medium rounded-lg shadow-lg transition-all w-32"
       >
         Pause
       </button>
       <button
         @click="resetTimer"
-        class="px-6 py-3 bg-gradient-to-r from-gray-700 to-gray-800 hover:from-gray-800 hover:to-gray-900 text-white font-medium rounded-lg shadow-lg transition-all"
+        class="px-6 py-3 bg-gradient-to-r from-gray-700 to-gray-800 hover:from-gray-800 hover:to-gray-900 text-white font-medium rounded-lg shadow-lg transition-all w-32"
       >
         Reset
       </button>
